# armstrong_robot

./: README.md
armstrong_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
armstrong_ws/install/armstrong_bringup/share/armstrong_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
armstrong_ws/install/armstrong_controller/lib/armstrong_controller/: effort_teleop.py  (+1 more)
armstrong_ws/log/: latest_build
armstrong_ws/src/armstrong_bringup/: CMakeLists.txt
armstrong_ws/src/armstrong_bringup/launch/: armstrong_simulated.launch.py
armstrong_ws/src/armstrong_controller/: CMakeLists.txt  package.xml
armstrong_ws/src/armstrong_controller/config/: armstrong_v1_controllers.yaml  effort_teleop.yaml  joint2_target_publisher.yaml  joint_pid_params.yaml  oltf_data_acq.yaml
armstrong_ws/src/armstrong_controller/launch/: controller.launch.py  joint2_target_publisher.launch.py  joint_pid.launch.py  oltf_data_acq.launch.py  teleop.launch.py
armstrong_ws/src/armstrong_controller/scripts/: effort_teleop.py  joint2_target_publisher.py  oltf_data_acq.py
armstrong_ws/src/armstrong_controller/src/: joint_pid_controller.cpp
armstrong_ws/src/armstrong_description/: CMakeLists.txt
armstrong_ws/src/armstrong_description/launch/: display.launch.py  gazebo.launch.py
armstrong_ws/src/armstrong_description/rviz/: armstrong_display.rviz
armstrong_ws/src/armstrong_description/worlds/: empty_world.world
data_acquisition/: joint2_oltf.csv  quick_visual.ipynb  test1.csv
matlab/: discretization.m  pid_design.m  system_identification.m
matlab_2/: Bodeplot.mlx  Nyquist.mlx  Transient.mlx  controller.mlx  plotsimulasiperhitungan.mlx  rootlocus.mlx
(+58 files in other folders)
